add order form to modal on all pages, add tooltips when add product to cart

--- a/inc/orders.html
+++ b/inc/orders.html
@@ -6,3 +6,6 @@
 	<title>Заявки</title>
 </head>
 <body>
+<b>Имя пользователя: </b> <b>Телефон: </b> <b>Email: </b> <b>Итоговая сумма: </b> 800 тг<b>Детали заказа: </b> %0AНазвание Пицца. Количество: 1. Стоимость 500%0AНазвание Суши. Количество: 1. Стоимость 300%0A
+<b>Имя пользователя: </b> Сергей<b>Телефон: </b> 9777123123<b>Email: </b> mail@mail.com<b>Итоговая сумма: </b> 800 тг<b>Детали заказа: </b> %0AНазвание Пицца. Количество: 1. Стоимость 500%0AНазвание Суши. Количество: 1. Стоимость 300%0A
+<b>Имя пользователя: </b> Сергей<b>Телефон: </b> 9777123123<b>Email: </b> mail@mail.com<b>Итоговая сумма: </b> 800 тг<b>Детали заказа: </b> %0AНазвание Пицца. Количество: 1. Стоимость 500%0AНазвание Суши. Количество: 1. Стоимость 300%0A
