--- a/inc/orders.html
+++ b/inc/orders.html
@@ -10,3 +10,4 @@
 <b>Имя пользователя: </b> Сергей<b>Телефон: </b> 9777123123<b>Email: </b> mail@mail.com<b>Итоговая сумма: </b> 800 тг<b>Детали заказа: </b> %0AНазвание Пицца. Количество: 1. Стоимость 500%0AНазвание Суши. Количество: 1. Стоимость 300%0A
 <b>Имя пользователя: </b> Сергей<b>Телефон: </b> 9777123123<b>Email: </b> mail@mail.com<b>Итоговая сумма: </b> 800 тг<b>Детали заказа: </b> %0AНазвание Пицца. Количество: 1. Стоимость 500%0AНазвание Суши. Количество: 1. Стоимость 300%0A
 <b>Имя пользователя: </b> saedfg<b>Телефон: </b> 9777123123<b>Email: </b> mail@mail.com<b>Итоговая сумма: </b> 0 тг<b>Детали заказа: </b> %0A
+<b>Имя пользователя: </b> 123<b>Телефон: </b> 123<b>Email: </b> 123@123.ru<b>Итоговая сумма: </b> 500 тг<b>Детали заказа: </b> %0AНазвание Пицца. Количество: 1. Стоимость 500%0A
